# mlir-demo

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  lint.yml
include/: DemoDialect.h  DemoDialect.td  DemoOps.h  DemoOps.td
include/Demo/: CMakeLists.txt  DemoDialect.h  DemoDialect.td  DemoOps.h  DemoOps.td
lib/: CMakeLists.txt  DemoDialect.cpp  DemoOps.cpp
lib/Demo/: CMakeLists.txt  DemoDialect.cpp  DemoOps.cpp
tools/: demo-opt.cpp
